--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,11 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "typeface-roboto": "^1.1.13",
-        "typescript": "^4.0.3"
+        "typescript": "^4.1.3"
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "GENERATE_SOURCEMAP=false react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
