--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: '3.5'
+version: '3.8'
 services:
     server:
         build:
             context: .
+            dockerfile: Dockerfile.dev
             target: server
         volumes:
             - ./server:/usr/src/app
@@ -15,6 +16,7 @@ services:
     client:
         build:
             context: .
+            dockerfile: Dockerfile.dev
             target: client
         volumes:
             - ./client:/usr/src/app
