--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,6 @@
-client/node_modules/*
-client/build/*
-client/dist/*
-server/node_modules/*
-server/build/*
-server/dist/*
+**/node_modules
+**/build
+**/dist
 */.git/
 .gitignore
 Dockerfile
