--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "NODE_ENV='development' ts-node-dev --respawn --transpile-only ./src/server.ts",
         "build": "tsc -p .",
-        "prod": "NODE_ENV='production' PORT='80' node ./dist/server.js"
+        "prod": "NODE_ENV='production' PORT='80' node ./server.js"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
@@ -16,8 +16,7 @@
         "mongoose": "^5.11.12",
         "morgan": "~1.10.0",
         "passport": "^0.4.1",
-        "passport-jwt": "^4.0.0",
-        "typescript": "^4.1.3"
+        "passport-jwt": "^4.0.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
@@ -31,6 +30,7 @@
         "@typescript-eslint/parser": "^4.11.0",
         "eslint": "^7.16.0",
         "prettier": "^2.2.1",
-        "ts-node-dev": "^1.1.1"
+        "ts-node-dev": "^1.1.1",
+        "typescript": "^4.1.3"
     }
 }
