--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.7",
         "axios": "^0.21.1",
+        "firebase": "^8.2.4",
         "formik": "^2.2.6",
         "formik-material-ui": "^3.0.1",
         "react": "^17.0.1",
