--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,7 @@
         // "declaration": true,
         "lib": ["esnext"],
         "module": "commonjs",
-        "target": "es5",
+        "target": "ES6",
         // "sourceMap": true,
         "allowJs": true,
         "esModuleInterop": true,
