--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
         "prod": "NODE_ENV='production' PORT='80' node ./server.js"
     },
     "dependencies": {
+        "apollo-server-express": "^2.19.2",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.5",
         "express": "~4.17.1",
         "firebase-admin": "^9.4.2",
+        "graphql": "^15.4.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.12",
         "morgan": "~1.10.0",
