--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
         "prod": "NODE_ENV='production' PORT='80' node ./server.js"
     },
     "dependencies": {
+        "@graphql-tools/merge": "^6.2.7",
         "apollo-server-express": "^2.19.2",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
@@ -15,6 +16,7 @@
         "express": "~4.17.1",
         "firebase-admin": "^9.4.2",
         "graphql": "^15.4.0",
+        "graphql-iso-date": "^3.6.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.12",
         "morgan": "~1.10.0",
@@ -25,6 +27,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.9",
+        "@types/graphql-iso-date": "^3.4.0",
         "@types/morgan": "^1.9.2",
         "@types/node": "^14.14.16",
         "@types/passport": "^1.0.4",
