--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.5",
+        "dataloader": "^2.0.0",
         "express": "~4.17.1",
         "firebase-admin": "^9.4.2",
         "graphql": "^15.4.0",
