--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@apollo/client": "^3.3.7",
         "@material-ui/core": "^4.11.2",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -16,6 +17,7 @@
         "firebase": "^8.2.4",
         "formik": "^2.2.6",
         "formik-material-ui": "^3.0.1",
+        "graphql": "^15.5.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
