--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
         "start": "react-scripts start",
         "build": "GENERATE_SOURCEMAP=false react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "generate": "graphql-codegen --config codegen.yml"
     },
     "eslintConfig": {
         "extends": [
@@ -49,5 +50,12 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@graphql-codegen/cli": "1.20.1",
+        "@graphql-codegen/typescript-react-apollo": "2.2.1",
+        "@graphql-codegen/typescript-operations": "1.17.14",
+        "@graphql-codegen/typescript": "1.20.2",
+        "@graphql-codegen/introspection": "1.18.1"
     }
 }
