--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@apollo/client": "^3.3.7",
         "@material-ui/core": "^4.11.2",
+        "@material-ui/icons": "^4.11.2",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
@@ -18,12 +19,14 @@
         "formik": "^2.2.6",
         "formik-material-ui": "^3.0.1",
         "graphql": "^15.5.0",
+        "immer": "^8.0.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "typeface-roboto": "^1.1.13",
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.3",
+        "use-immer": "^0.4.2"
     },
     "scripts": {
         "start": "react-scripts start",
