--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,6 +34,8 @@ jobs:
               id: docker_build
               uses: docker/build-push-action@v2
               with:
+                  context: .
+                  file: Dockerfile.server
                   pull: true
                   push: true
                   no-cache: true
