--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,18 @@
 version: 2.1
-jobs:
-  build:
+executors:
+  docker-publisher:
+    environment:
+      IMAGE_NAME: kyles11/ts-express-todo
     docker:
       - image: cimg/base:stable
+jobs:
+  build:
+    executor: docker-publisher
     steps:
       - checkout
       - setup_remote_docker
-      - run: 
-          name: "Build Docker Image"
+      - run:
+          name: Build Docker image
           command: >-
             docker build 
               --no-cache
@@ -15,13 +20,31 @@ jobs:
               -t $DOCKER_USER/ts-express-todo:latest
               -t $DOCKER_USER/ts-express-todo:$CIRCLE_TAG
               .
-          name: "Login Dockerhub"
-          command: echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-          name: "Push Docker image"
-          command: docker push --all-tags $DOCKER_USER/ts-express-todo
+      - run:
+          name: Archive Docker image
+          command: docker save -o image.tar $IMAGE_NAME
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./image.tar
+  publish:
+    executor: docker-publisher
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - setup_remote_docker
+      - run:
+          name: Load archived Docker image
+          command: docker load -i /tmp/workspace/image.tar
+      - run:
+          name: Publish Docker Image to Docker Hub
+          command: |
+            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker push $IMAGE_NAME:latest
+      
 
 workflows:
-  build:
+  build-n-publish:
       jobs:
         - build:
             filters:
@@ -29,4 +52,12 @@ workflows:
                 only: /.*/
               branches:
                 ignore: /.*/
+        - publish:
+            requires:
+              - build
+            filters:
+                tags:
+                  only: /.*/
+                branches:
+                  ignore: /.*/
 
