--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ jobs:
             docker build 
               --no-cache
               -f Dockerfile.server
-              -t $DOCKER_USER/ts-express-todo:latest
-              -t $DOCKER_USER/ts-express-todo:$CIRCLE_TAG
+              -t $IMAGE_NAME:latest
+              -t $IMAGE_NAME:$CIRCLE_TAG
               .
       - run:
           name: Archive Docker image
@@ -40,7 +40,7 @@ jobs:
           name: Publish Docker Image to Docker Hub
           command: |
             echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-            docker push $IMAGE_NAME:latest
+            docker push --all-tags $IMAGE_NAME
       
 
 workflows:
