--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,7 @@ jobs:
             --no-cache
             -f Dockerfile.server
             -t $IMAGE_NAME:latest
-            -t $IMAGE_NAME:$CIRCLE_TAG
-            .
+            -t $IMAGE_NAME:$CIRCLE_TAG .
       - run:
           name: Archive Docker image
           command: docker save -o image.tar $IMAGE_NAME
