--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ executors:
     environment:
       IMAGE_NAME: kyles11/ts-express-todo
     docker:
-      - image: cimg/node:lts
+      - image: cimg/base:stable
 jobs:
   build:
     executor: docker-publisher
@@ -32,7 +32,8 @@ jobs:
     steps:
       - attach_workspace:
           at: /tmp/workspace
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: 19.03.13
       - run:
           name: Load archived Docker image
           command: docker load -i /tmp/workspace/image.tar
