--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,3 +1,4 @@
+ARG CONT_IMG_VER
 FROM node:lts-alpine as server_builder
 
 WORKDIR /usr/src/app
@@ -13,7 +14,7 @@ RUN yarn build
 #================================================================
 
 FROM node:lts-alpine
-
+ENV CONT_IMG_VER=${CONT_IMG_VER:-v1.0.0}
 WORKDIR /usr/src/app
 
 COPY /server/package.json /server/yarn.lock ./
