--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,64 +1,63 @@
 version: 2.1
 executors:
-  docker-publisher:
-    environment:
-      IMAGE_NAME: kyles11/ts-express-todo
-    docker:
-      - image: cimg/base:stable
+    docker-publisher:
+        environment:
+            IMAGE_NAME: kyles11/ts-express-todo
+        docker:
+            - image: cimg/base:stable
 jobs:
-  build:
-    executor: docker-publisher
-    steps:
-      - checkout
-      - setup_remote_docker:
-          version: 19.03.13
-      - run:
-          name: Build Docker image
-          command: >
-            docker build
-            --no-cache
-            -f Dockerfile.server
-            -t $IMAGE_NAME:latest
-            -t $IMAGE_NAME:$CIRCLE_TAG .
-      - run:
-          name: Archive Docker image
-          command: docker save -o image.tar $IMAGE_NAME
-      - persist_to_workspace:
-          root: .
-          paths:
-            - ./image.tar
-  publish:
-    executor: docker-publisher
-    steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - setup_remote_docker:
-          version: 19.03.13
-      - run:
-          name: Load archived Docker image
-          command: docker load -i /tmp/workspace/image.tar
-      - run:
-          name: Publish Docker Image to Docker Hub
-          command: |
-            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-            docker push --all-tags $IMAGE_NAME
-      
+    build:
+        executor: docker-publisher
+        steps:
+            - checkout
+            - setup_remote_docker:
+                  version: 19.03.13
+            - run:
+                  name: Build Docker image
+                  command: >
+                      docker build
+                      --no-cache
+                      --build-arg CONT_IMG_VER=$CIRCLE_TAG
+                      -f Dockerfile.server
+                      -t $IMAGE_NAME:latest
+                      -t $IMAGE_NAME:$CIRCLE_TAG .
+            - run:
+                  name: Archive Docker image
+                  command: docker save -o image.tar $IMAGE_NAME
+            - persist_to_workspace:
+                  root: .
+                  paths:
+                      - ./image.tar
+    publish:
+        executor: docker-publisher
+        steps:
+            - attach_workspace:
+                  at: /tmp/workspace
+            - setup_remote_docker:
+                  version: 19.03.13
+            - run:
+                  name: Load archived Docker image
+                  command: docker load -i /tmp/workspace/image.tar
+            - run:
+                  name: Publish Docker Image to Docker Hub
+                  command: |
+                      echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+                      docker push --all-tags $IMAGE_NAME
 
 workflows:
-  build-n-publish:
-      jobs:
-        - build:
-            filters:
-              tags:
-                only: /.*/
-              branches:
-                ignore: /.*/
-        - publish:
-            requires:
-              - build
-            filters:
-                tags:
-                  only: /.*/
-                branches:
-                  ignore: /.*/
-
+    build-n-publish:
+        jobs:
+            - build:
+                  filters:
+                      tags:
+                          only: /.*/
+                      branches:
+                          ignore: /.*/
+            - publish:
+                  requires:
+                      - build
+                  filters:
+                      tags:
+                          only: /.*/
+                      branches:
+                          ignore: /.*/
