--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "NODE_ENV='development' ts-node-dev --respawn --transpile-only ./src/server.ts",
         "build": "tsc -p .",
-        "prod": "NODE_ENV='production' PORT='80' node ./server.js"
+        "prod": "NODE_ENV='production' PORT='80' node ./dist/server.js"
     },
     "dependencies": {
         "@graphql-tools/merge": "^8.2.1",
